--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                             <i class="fas fa-image fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">Product images</h4>
-                        <p class="text-muted">Bring your products to life with high-quality 3D images that can be customized and reused across any platform. Perfect for marketing materials, social media, or ecommerce—on-demand visuals save time and boost engagement.</p>
+                        <p class="text-muted">Bring your products to life with high-quality 3D images that can be customised and reused across any platform. Perfect for marketing materials, social media, or ecommerce—on-demand visuals save time and boost engagement.</p>
                         <a class="btn btn-primary btn-xl text-uppercase" href="#product-images">More</a>
                     </div>
                     <div class="col-md-4">
@@ -457,7 +457,7 @@
                             <!-- Email Icon and Email Address -->
                             <div class="email" style="margin-bottom: 10px;">
                                 <a href="mailto:hello@rasmusvolkov.com" style="text-decoration: none;">
-                                    <i class="fa-regular fa-envelope" style="color: black;"></i>
+                                    <i class="fa-solid fa-envelope" style="color: black;"></i>
                                     <span class="text-muted">hello@rasmusvolkov.com</span>
                                 </a>
                             </div>
@@ -496,12 +496,23 @@
                 <div class="text-center">
                     <p class="text-muted" style="font-style: normal;">
                         It doesn't matter if you've already got a concrete plan or just an inkling of an idea for what you need—let's hop on a quick call or meet in person to see what we can do. Either send me an email at hello@rasmusvolkov.com by clicking the big yellow button below, or shoot me a DM on LinkedIn. Speak soon!</p>
-                    <a class="btn btn-primary btn-xl text-uppercase" href="mailto:hello@rasmusvolkov.com" style="color: white; text-decoration: none;">
+                    
+                    <!-- Regular Contact Button for Desktop -->
+                    <a class="btn btn-primary btn-xl text-uppercase contact-desktop" href="mailto:hello@rasmusvolkov.com">
                         Contact Me
                     </a>
+
+                    <!-- Slider Contact Button for Mobile -->
+                    <div class="slider-container contact-mobile">
+                        <div class="slider-text">Slide to Contact</div>
+                        <div class="slider">
+                            <i class="fa-regular fa-envelope"></i>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
+
         <!-- Footer-->
         <footer class="footer py-4">
             <div class="container">
