--- a/index.html
+++ b/index.html
@@ -353,22 +353,50 @@
             <h3 class="section-subheading text-muted">Even the best ideas go unnoticed if they aren't communicated clearly and memorably</h3>
         </div>
 <!-- Product Images Section -->
+<!-- Product Images Section -->
 <section class="page-section bg-light" id="product-images">
     <div class="container">
         <div class="service-item mb-5">
             <h3 class="service-title">Product Images</h3>
             <div class="row align-items-start">
                 <div class="col-lg-6">
-                    <video class="img-fluid rounded shadow" autoplay muted loop playsinline>
-                        <source src="../assets/img/header.mp4" type="video/mp4">
-                        Your browser does not support the video tag.
-                    </video>
+                    <div id="productImagesCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="5000">
+                        <!-- Indicators/dots -->
+                        <div class="carousel-indicators">
+                            <button type="button" data-bs-target="#productImagesCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                            <button type="button" data-bs-target="#productImagesCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                            <button type="button" data-bs-target="#productImagesCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                        </div>
+
+                        <!-- The slideshow/carousel -->
+                        <div class="carousel-inner rounded shadow">
+                            <div class="carousel-item active">
+                                <img src="../assets/img/header.png" class="d-block w-100" alt="Product visualization example 1">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="../assets/img/lambo.png" class="d-block w-100" alt="Product visualization example 2">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="../assets/img/lipstick.png" class="d-block w-100" alt="Product visualization example 3">
+                            </div>
+                        </div>
+
+                        <!-- Left and right controls/icons -->
+                        <button class="carousel-control-prev" type="button" data-bs-target="#productImagesCarousel" data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#productImagesCarousel" data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </button>
+                    </div>
                 </div>
                 <div class="col-lg-6 service-text">
                     <div class="service-features">
                         <div class="feature-item mb-4">
                             <h4>A picture is worth a thousand <s>words</s> clicks.</h4>
-                            <p class="text mb-4">Why settle for what’s possible with a camera when 3D gives you limitless possibilities? Whether it’s a product that doesn’t exist yet, a colour variation that wasn’t in stock for the shoot, or an angle that would make a photographer groan, we’ve got you covered.</p>
+                            <p class="text mb-4">Why settle for what's possible with a camera when 3D gives you limitless possibilities? Whether it's a product that doesn't exist yet, a colour variation that wasn't in stock for the shoot, or an angle that would make a photographer groan, we've got you covered.</p>
                             <p class="text mb-4">Our 3D product visuals are hyperrealistic, endlessly customisable, and perfect for showcasing your ideas. Need a consistent look across hundreds of SKUs? Done. Want to explore impossible perspectives, like the inner workings of a watch or a cutaway of a luxury car? Easy.</p>
                             <p class="text">From launching your next big idea to refreshing your product line, our visuals are ready to make your audience stop, stare, and add to cart.</p>
                         </div>
@@ -414,7 +442,7 @@
             <div class="row align-items-start">
                 <div class="col-lg-6">
                     <video class="img-fluid rounded shadow" autoplay muted loop playsinline>
-                        <source src="../assets/img/header.mp4" type="video/mp4">
+                        <source src="assets/img/portfolio/MuonExplainer2.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
                 </div>
