--- a/index.html
+++ b/index.html
@@ -396,9 +396,9 @@
                     <div class="service-features">
                         <div class="feature-item mb-4">
                             <h4>A picture is worth a thousand <s>words</s> clicks.</h4>
-                            <p class="text mb-4">Why settle for what's possible with a camera when 3D gives you limitless possibilities? Whether it's a product that doesn't exist yet, a colour variation that wasn't in stock for the shoot, or an angle that would make a photographer groan, we've got you covered.</p>
-                            <p class="text mb-4">Our 3D product visuals are hyperrealistic, endlessly customisable, and perfect for showcasing your ideas. Need a consistent look across hundreds of SKUs? Done. Want to explore impossible perspectives, like the inner workings of a watch or a cutaway of a luxury car? Easy.</p>
-                            <p class="text">From launching your next big idea to refreshing your product line, our visuals are ready to make your audience stop, stare, and add to cart.</p>
+                            <p class="text mb-4">Why settle for what's possible with a camera when 3D gives you limitless possibilities? Whether it's a product that doesn't exist yet, a colour variation that wasn't in stock for the shoot, or an angle that would make a photographer groan, I've got you covered.</p>
+                            <p class="text mb-4">My 3D product visuals are realistic, endlessly customisable, and perfect for visualising your ideas. Need a consistent look across hundreds of SKUs? Done. Want to explore impossible perspectives, like the inner workings of a watch or a cutaway of a luxury car? Easy.</p>
+                            <p class="text">From launching your next big idea to refreshing your product line, my visuals are ready to make your audience stop, stare, and add to cart.</p>
                         </div>
                     </div>
                 </div>
@@ -416,8 +416,8 @@
                 <div class="col-lg-6 service-text">
                     <div class="service-features">
                         <div class="feature-item mb-4">
-                            <h4>Because why explain it when you can show it?</h4>
-                            <p class="text mb-4">Static images are great, but let’s be honest—they can only do so much. 3D animations, on the other hand, bring your products to life. Show how it works, how it’s built, or why it’s worth the hype, all in a few seconds of scrolling magic.</p>
+                            <h4>Show it off!</h4>
+                            <p class="text mb-4">Static images are great, but let’s be honest—they can only do so much. 3D animations, on the other hand, bring your products to life. Show how it works, how it’s built, or why it’s worth the hype, all in a few seconds.</p>
                             <p class="text mb-4">I can take your product apart—literally. Exploded views, cutaways, or internal processes? No problem. Want to highlight invisible features like airflow, energy transfer, or materials in motion? I'll make the intangible tangible.</p>
                             <p class="text">Perfect for grabbing attention on social media, standing out in ads, or educating customers with a wow factor, these animations are designed to do one thing: make your product unforgettable.</p>
                         </div>
@@ -450,9 +450,9 @@
                     <div class="service-features">
                         <div class="feature-item mb-4">
                             <h4>Turning "Wait, what?" into "Oh, now I get it."</h4>
-                            <p class="text mb-4">Your solution is genius, but does your audience get it? Whether you're pitching investors, educating customers, or simplifying the complex for a press release, 3D tech explainers cut through the noise.</p>
-                            <p class="text mb-4">I translate complicated concepts into captivating visuals, whether that's showing how a piece of hardware functions, demonstrating software workflows, or breaking down complex systems like energy grids or AI.</p>
-                            <p class="text">These aren't just animations—they're your most powerful storytelling tool. Because when people understand your vision, they're more likely to believe in it.</p>
+                            <p class="text mb-4">Your solution is genius, but does your audience get it? Whether you're pitching investors, educating customers, or trying to get your press release published, 3D tech explainers cut through the noise.</p>
+                            <p class="text mb-4">I translate complicated concepts, often found in nascent tech, into captivating visuals, whether that's showing how a piece of hardware functions, demonstrating software workflows, or breaking down systems like energy grids or AI.</p>
+                            <p class="text">Working with journalists has shown me that explainer videos are a great wingman for your announcements. In a world drowning in tech news, no one has time to decode it all. A well done explainer video is hard to ignore—and it massively boosts your chances of getting noticed and published.</p>
                         </div>
                     </div>
                 </div>
@@ -497,7 +497,7 @@
                     <div class="col-lg-8">
                         <div class="text-left">
                             <p class="large text-muted">Your sales team's best friend. With over a decade in marketing and advertising, I help companies get noticed—whether that's on the global stage or right in front of the people who matter most.</p>
-                            <p class="large text-muted">By day, I'm a communications consultant for tech companies, translating complex tech jargon into clear, compelling narratives. By night, I'm a marketing freelancer and 3D artist, blending creativity and strategy to make sure ideas not only look good but resonate with the right audience.</p>
+                            <p class="large text-muted">By day, I'm a communications consultant for tech companies, translating complex tech jargon into clear, compelling narratives. By night, I'm a marketing freelancer and 3D visualiser, blending creativity and strategy to make sure ideas not only look good but resonate with the right audience.</p>
                             <p class="large text-muted">I've seen too many great companies with amazing products fail to gain traction because their message gets lost in translation. My job is to make sure that doesn't happen to you.</p>
                             <p class="large text-muted">From running Etsy stores and creating paid ads for robotics companies to writing key messages and press releases for B2B fintechs and developing go-to-market strategies for Web3 companies, I've worked across a wide spectrum. That range of experience means I can adapt to your unique challenges and give you the best shot at getting your message across in a way that sticks.</p>
                             <p class="large text-muted"><strong>tl;dr:</strong> If you've got a product, solution or a service and want the world to know how awesome it is, I'm your guy.</p>
