Added to portfolio

--- a/index.html
+++ b/index.html
@@ -190,15 +190,15 @@
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
                                 <!-- Square video -->
-                                <video class="portfolio-video square" muted loop preload="none" poster="assets/img/portfolio/beauty.jpg" style="border-radius: 45px;">
-                                    <source src="assets/img/portfolio/LEGO1.mp4.mp4" type="video/mp4">
+                                <video class="portfolio-video square" muted loop preload="none" poster="assets/img/portfolio/LEGO.png" style="border-radius: 45px;">
+                                    <source src="assets/img/portfolio/LEGO2.mp4" type="video/mp4">
                                     Your browser does not support the video tag.
                                 </video>
-                                <img class="img-fluid" src="assets/img/portfolio/beauty.jpg" alt="Beauty product animation" style="border-radius: 45px;" />
+                                <img class="img-fluid" src="assets/img/portfolio/LEGO.png" alt="Beauty product animation" style="border-radius: 45px;" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Clip: Beauty product</div>
-                                <div class="portfolio-caption-subheading text-muted">Simple quick video to use as a more eye-catching and engaging alternative instead of static image.</div>
+                                <div class="portfolio-caption-heading">LEGO® ad for a toy store</div>
+                                <div class="portfolio-caption-subheading text-muted">Attention-grabbing video for Estonian audience highlighting a campaign and fast delivery</div>
                             </div>
                         </div>
                     </div>
@@ -817,7 +817,7 @@
                                         <source src="assets/img/portfolio/headphones-gold.mp4" type="video/mp4">
                                         Your browser does not support the video tag.
                                     </video>
-                                    
+
                                     <ul class="list-inline">
                                     </ul>
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
@@ -840,16 +840,16 @@
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project details-->
-                                    <h2 class="text-uppercase">Wireless headphones</h2>
-                                    <p class="item-intro text-muted">Aesthetic shot</p>
+                                    <h2 class="text-uppercase">LEGO® ad for a toy store</h2>
+                                    <p class="item-intro text-muted">Attention-grabbing video for Estonian audience highlighting a campaign and fast delivery</p>
                                     
                                     <!-- Video instead of image -->
                                     <video id="video5" class="img-fluid d-block mx-auto" controls>
-                                        <source src="assets/img/portfolio/LEGO1.mp4.mp4" type="video/mp4">
+                                        <source src="assets/img/portfolio/LEGO1.mp4" type="video/mp4">
                                         Your browser does not support the video tag.
                                     </video>
                                     <video id="video5" class="img-fluid d-block mx-auto" controls>
-                                        <source src="assets/img/portfolio/LEGO2.mp4.mp4.mp4" type="video/mp4">
+                                        <source src="assets/img/portfolio/LEGO2.mp4" type="video/mp4">
                                         Your browser does not support the video tag.
                                     </video>
 
