--- a/index.html
+++ b/index.html
@@ -548,7 +548,7 @@
                 </div>
                 <div class="text-center">
                     <p class="text-muted" style="font-style: normal;">
-                        It doesn't matter if you've already got a concrete plan or just an inkling of an idea for what you need—let's hop on a quick call or meet in person to see what we can do. Either send me an email at hello@rasmusvolkov.com by clicking the big yellow button below, or shoot me a DM on LinkedIn. Speak soon!</p>
+                        It doesn't matter if you've already got a concrete plan or just an inkling of an idea for what you need—let's hop on a quick call or meet in person to see what we can do. Either send me an email by clicking the big yellow button below, or shoot me a DM on LinkedIn. Speak soon!</p>
                     
                     <!-- Regular Contact Button for Desktop -->
                     <a class="btn btn-primary btn-xl text-uppercase contact-desktop" href="mailto:rasmus.volkov@gmail.com">
